<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mdomagal.myapplication.LevelActivity"
    android:clickable="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="4">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:weightSum="5">


        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:weightSum="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.25"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/motorX"
                            android:layout_weight="0.5"
                            android:id="@+id/textView5" />

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:layout_weight="1"
                            android:id="@+id/radioGroupX"
                            android:onClick="onRadioButtonClicked">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/A"
                            android:layout_weight="1"
                            android:id="@+id/radioXA" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/B"
                            android:layout_weight="1"
                            android:id="@+id/radioXB" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/C"
                            android:layout_weight="1"
                            android:id="@+id/radioXC" />

                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.25"
                        android:weightSum="2">

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:text="@string/plusButton"
                            android:id="@+id/butPlusX" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.4"/>

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:text="@string/minusButton"
                            android:id="@+id/butMinusX" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:weightSum="2"
                        android:layout_weight="0.25" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/motorY"
                            android:layout_weight="0.5"
                            android:id="@+id/textView6" />

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:layout_weight="1"
                            android:id="@+id/radioGroupY"
                            android:onClick="onRadioButtonClicked">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/A"
                            android:layout_weight="1"
                            android:id="@+id/radioYA" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/B"
                            android:layout_weight="1"
                            android:id="@+id/radioYB" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/C"
                            android:layout_weight="1"
                            android:id="@+id/radioYC" />
                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.25"
                        android:weightSum="2">

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:text="@string/plusButton"
                            android:id="@+id/butPlusY" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.4"/>

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:text="@string/minusButton"
                            android:id="@+id/butMinusY" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:weightSum="2">

    <Space
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="match_parent"
                android:weightSum="4">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/checkBoxX"
                    android:checked="false" />

                <com.example.mdomagal.myapplication.VerticalTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/rev"
                    android:layout_weight="1.65"
                    android:id="@+id/textView7"
                    android:gravity="center" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/checkBoxY" />

            </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"
                android:weightSum="5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/gear"
                    android:layout_weight="1"
                    android:id="@+id/textView4" />

                <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gearSeekBar"
                    android:layout_weight="4" />
            </LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/accept"
                android:id="@+id/acceptButton"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.4" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
